# openbsd-sed

./: AUTHORS  COPYING  Makefile.am  README  configure.ac  defs.h  extern.h  main.c  misc.c  process.c
